# bcaiworkshop

./: README.md
00-getready/: pyproject.toml
01-a-airepl/: app.py  pyproject.toml
01-b-airepl/: app.py  pyproject.toml
01-gradio/: app.py  pyproject.toml
02-markov/: app.py  pyproject.toml
