[tool.poetry]
name = "workshopgradio"
version = "0.1.0"
description = ""
authors = ["Hampton Smith <1743291+hamptonsmith@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.37.1"
huggingface-hub = "^0.23.4"
langchain-huggingface = "^0.0.3"
langchain-openai = "^0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
